# Smart-City

./: .gitattributes  .gitignore  CMakeLists.txt  Logs.txt  README.md  main.cpp
backend/: compose.yaml
backend/graphhopper/: Dockerfile
backend/nominatim/: Dockerfile
backend/nominatim/data/: pomorskie-latest.osm.pbf
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: MevoFinder.dart  PlacesList.dart  main.dart  path_node.dart  webservice.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc
howling_legs/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
howling_legs/.dart_tool/: package_config.json  package_config_subset
howling_legs/.dart_tool/chrome-device/Default/: DIPS  Favicons  History  History-journal  MediaDeviceSalts  Network Action Predictor  (+5 more)
howling_legs/android/: local.properties
howling_legs/android/app/: build.gradle
howling_legs/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
howling_legs/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
howling_legs/lib/: MevoFinder.dart  PathCreator.dart  Place.dart  PlacesList.dart  PlacesPath.dart  location_selector.dart  main.dart  option.dart  path_node.dart  time_display.dart  webservice.dart
howling_legs/linux/: my_application.cc
howling_legs/macos/Runner.xcodeproj/: project.pbxproj
howling_legs/web/: index.html  manifest.json
howling_legs/windows/runner/: main.cpp
include/: CMakeLists.txt  debug_interceptor.hpp  path.h
smart_city/: pubspec.yaml
smart_city/android/app/: build.gradle
smart_city/ios/Runner.xcodeproj/: project.pbxproj
smart_city/lib/: main.dart
smart_city/macos/Runner.xcodeproj/: project.pbxproj
smart_city/web/: index.html
src/: CMakeLists.txt  debug_interceptor.cpp  main.cpp  path.cpp
src_gui/: CMakeLists.txt  ChosenPlaces.qml  LocationSelector.qml  Main.qml  Place.qml  path.cpp  path.h  place.cpp  place.h
(+47 files in other folders)
